# EverOS

./: .gitignore  .markdownlint.json  AGENTS.md  README.md
.github/: CODEOWNERS  CONTRIBUTING.md  MUW_REVIEW_LANE.md  MUW_REVIEW_REPLY.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: pr_tracker.yml  security_tracker.yml
.github/agents/: muw-review.md
.github/scripts/: muw-review-lane.mjs  overnight-watch.mjs
.github/workflows/: docs.yml  linear-sync.yml  overnight-watch.yml  stale.yml  sync-upstream.yml
.planning/: CODEX_INTERVENTION.md  HEARTBEAT.txt  SLEEP_LOG.md  WAKEUP_REPORT.md  dependabot-alerts.json  dependabot-audit.md  triage-summary.md
.planning/baseline/: docs.txt  issues.json  prs.json  structure.txt  workflows.json
.planning/codex-watch/: AUDIT_LOG.md  BASELINE_FORK_MAIN.sha  BASELINE_UPSTREAM_MAIN.sha  FINAL_AUDIT.md  SCORE_AUDIT.md
.planning/hermes-recon/: architecture.md
.planning/may-agent/: 00-vision.md  10-architecture.md  20-rust-runtime-scaffold.md  30-evercore-integration-contract.md  40-benchmark-strategy.md  90-risk-log.md  INDEX.md
.planning/mega-run/: DECISIONS.md  (+7 more)
docs/: ONBOARDING_CN.md  goal.md
use-cases/hermes-everos-memory/raven-console/: Cargo.toml
use-cases/hermes-everos-memory/raven-console/src/: audit.rs  commands.rs  constants.rs  context.rs  main.rs  model.rs  output.rs  receipt.rs  repl.rs  research.rs  sanitizer.rs  snapshot.rs  tui.rs  util.rs
use-cases/hermes-everos-memory/raven-console/src/adapters/: hermes.rs  memory.rs  mod.rs  muw.rs  packet.rs  sc.rs  verify.rs
(+59 files in other folders)
