[package]
name = "raven-console"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "raven"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1.11"
rustyline = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
